--- a/src/components/Grafico/grafico.scss
+++ b/src/components/Grafico/grafico.scss
@@ -20,7 +20,7 @@
   align-items:end;
   height:34vh;
 
-  --height-var: 34vh;
+  //--height-var: 34vh;
    width: 100%;
   
   //margin:0 10em 0 2em;
@@ -94,21 +94,24 @@
     }
 
     .textinho{
+      width: 20%;
       margin-top: 0.5vh;
+      padding-top: var(--height-var);
+      position: absolute;
       // font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       font-weight: bold;
-      font-size: 1em;
+      font-size: 0.9rem;
       @media (max-width: 768px) {
-        font-size: 0.7em;
+        font-size: 0.7rem;
       }
       @media (max-width: 530px) {
-        font-size: 0.6em;
+        font-size: 0.6rem;
       }
       @media (max-width: 400px) {
-        font-size: 0.4em;
+        font-size: 0.5rem;
       }
       @media (max-width: 320px) {
-        font-size: 0.3em;
+        font-size: 0.4rem;
       }
     }
   }
@@ -225,14 +228,14 @@ section{
     }
 
     .desc1{
-      height: calc(((86) * var(--height-var))/100 );
+      height: calc(((106) * var(--height-var))/100 );
     }
-    .desc2{
-      height: calc(((36) * var(--height-var))/100 );
-    }
-    .desc3{
-      height: calc(((66) * var(--height-var))/100 );
-    }
+    // .desc2{
+    //   height: calc(((36) * var(--height-var))/100 );
+    // }
+    // .desc3{
+    //   height: calc(((66) * var(--height-var))/100 );
+    // }
     //font-size: 3vh;
     
   }
@@ -321,7 +324,7 @@ section{
 
 .selea{
   width: 100%;
-  height: 28vh;
+  height: max-content;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -348,6 +351,7 @@ section{
     position:absolute;
     height: 28vh;
     width: 40vw;
+    z-index: 5;
     @media (max-width: 768px) {
       width: 60vw;
     }
@@ -424,8 +428,8 @@ section{
   
   .seletorart{
     width: 40vw;
-    height: 28vh;
-    position:absolute;
+    //height: 28vh;
+    //position:absolute;
     @media (max-width: 768px) {
       width: 60vw;
     }
@@ -434,7 +438,7 @@ section{
     }
   
     .blocoseletor{
-      height: 5vh;
+      //height: 5vh;
       width: 100%;
       background: #fff;
   
@@ -443,6 +447,14 @@ section{
   
       h4{
         margin: 0;
+        width: 200%;
+        font-size: 1rem;
+        @media (max-width: 768px) {
+          font-size: 0.9rem;
+        }
+        @media (max-width: 400px) {
+          font-size: 0.8rem;
+        }
       }
       //text-align:;
   
@@ -450,7 +462,7 @@ section{
         width: 97%;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        //justify-content: space-between;
         margin-top: 0.2vw;
         margin-left: 1vw;
   
